--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -1,24 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="NHF-BA-IMx">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Reveal View Controller-->
+        <scene sceneID="2zl-f3-FvA">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="NHF-BA-IMx" customClass="SWRevealViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pHJ-VW-VdK"/>
+                        <viewControllerLayoutGuide type="bottom" id="GIT-9B-IHN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="MiG-NC-Q8p">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="J2r-Go-LhW"/>
+                    </view>
+                    <connections>
+                        <segue destination="SbT-Oj-grb" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="P4v-O0-g4k"/>
+                        <segue destination="6Mc-Yx-x29" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="3ac-1T-XGc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tyX-hq-gYj" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="586" y="-16"/>
+        </scene>
+        <!--Channel View Controller-->
+        <scene sceneID="XXH-ik-gcQ">
+            <objects>
+                <viewController id="SbT-Oj-grb" customClass="ChannelViewController" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2Hz-xK-ySY"/>
+                        <viewControllerLayoutGuide type="bottom" id="xbM-QS-Cmj"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ceF-dJ-r2j">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="x0u-bC-fKn"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0kF-zQ-Ge2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1678" y="-368"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="n6U-33-Wu4">
+            <objects>
+                <viewController id="6Mc-Yx-x29" customClass="ChatViewController" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0ut-q6-Gnh"/>
+                        <viewControllerLayoutGuide type="bottom" id="9zW-if-zhz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="D2W-I5-2Sf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DIk-Lc-Gad">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2f-3O-tzi">
+                                        <rect key="frame" x="12" y="47" width="24" height="18"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="24" id="aYQ-xf-C3i"/>
+                                            <constraint firstAttribute="height" constant="18" id="siD-Cp-ZsW"/>
+                                        </constraints>
+                                        <state key="normal" image="smackBurger"/>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbH-Wn-IR8">
+                                        <rect key="frame" x="161.5" y="45.5" width="52" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.2901960784" green="0.30196078430000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="v2f-3O-tzi" firstAttribute="leading" secondItem="DIk-Lc-Gad" secondAttribute="leading" constant="12" id="83x-45-Msj"/>
+                                    <constraint firstItem="WbH-Wn-IR8" firstAttribute="centerY" secondItem="v2f-3O-tzi" secondAttribute="centerY" id="GIp-O6-wD0"/>
+                                    <constraint firstAttribute="bottom" secondItem="v2f-3O-tzi" secondAttribute="bottom" constant="12" id="HGD-Iz-o5U"/>
+                                    <constraint firstItem="WbH-Wn-IR8" firstAttribute="centerX" secondItem="DIk-Lc-Gad" secondAttribute="centerX" id="PZg-c8-Yyd"/>
+                                    <constraint firstAttribute="height" constant="77" id="ajR-gl-4cE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DIk-Lc-Gad" firstAttribute="leading" secondItem="D2W-I5-2Sf" secondAttribute="leading" id="6uk-UT-rrH"/>
+                            <constraint firstAttribute="trailing" secondItem="DIk-Lc-Gad" secondAttribute="trailing" id="E9d-YW-lN6"/>
+                            <constraint firstItem="DIk-Lc-Gad" firstAttribute="top" secondItem="D2W-I5-2Sf" secondAttribute="top" id="RNl-Ac-sPQ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IoT-iX-jXX"/>
+                    </view>
+                    <connections>
+                        <outlet property="menuButton" destination="v2f-3O-tzi" id="ePu-sy-3l9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t6N-CQ-YOH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1678" y="353"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="smackBurger" width="40" height="40"/>
+    </resources>
 </document>
