--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -40,16 +40,68 @@
                         <viewControllerLayoutGuide type="top" id="2Hz-xK-ySY"/>
                         <viewControllerLayoutGuide type="bottom" id="xbM-QS-Cmj"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ceF-dJ-r2j">
+                    <view key="view" contentMode="scaleToFill" id="ceF-dJ-r2j" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Smack" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rd-Dx-fqs">
+                                <rect key="frame" x="10" y="44" width="71" height="33"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="24"/>
+                                <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Channels" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WYq-co-VIV">
+                                <rect key="frame" x="10" y="97" width="53" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J2m-mq-iso">
+                                <rect key="frame" x="281" y="93.5" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="4Qt-8v-Yyg">
+                                <rect key="frame" x="20" y="592" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="RUH-Sh-Qim"/>
+                                    <constraint firstAttribute="height" constant="75" id="uYB-GJ-kpy"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Bcq-3M-wMr">
+                                <rect key="frame" x="0.0" y="125.5" width="375" height="456.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YGb-X8-mHh">
+                                <rect key="frame" x="115" y="607.5" width="60" height="44"/>
+                                <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="23"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Bcq-3M-wMr" firstAttribute="leading" secondItem="x0u-bC-fKn" secondAttribute="leading" id="5UC-LY-ebJ"/>
+                            <constraint firstItem="x0u-bC-fKn" firstAttribute="trailing" secondItem="Bcq-3M-wMr" secondAttribute="trailing" id="6Pu-Ps-Kiy"/>
+                            <constraint firstItem="4Qt-8v-Yyg" firstAttribute="leading" secondItem="x0u-bC-fKn" secondAttribute="leading" constant="20" id="7jb-Wy-gIS"/>
+                            <constraint firstItem="4Qt-8v-Yyg" firstAttribute="top" secondItem="Bcq-3M-wMr" secondAttribute="bottom" constant="10" id="8SJ-XB-KqH"/>
+                            <constraint firstItem="YGb-X8-mHh" firstAttribute="leading" secondItem="4Qt-8v-Yyg" secondAttribute="trailing" constant="20" id="B9p-Jc-ikh"/>
+                            <constraint firstItem="Bcq-3M-wMr" firstAttribute="top" secondItem="J2m-mq-iso" secondAttribute="bottom" constant="10" id="Dvr-QO-a2t"/>
+                            <constraint firstItem="J2m-mq-iso" firstAttribute="centerY" secondItem="WYq-co-VIV" secondAttribute="centerY" id="Krk-BR-bwj"/>
+                            <constraint firstItem="YGb-X8-mHh" firstAttribute="centerY" secondItem="4Qt-8v-Yyg" secondAttribute="centerY" id="Lw4-x1-7Yr"/>
+                            <constraint firstItem="WYq-co-VIV" firstAttribute="top" secondItem="7rd-Dx-fqs" secondAttribute="bottom" constant="20" id="Nqn-A1-ONS"/>
+                            <constraint firstItem="7rd-Dx-fqs" firstAttribute="leading" secondItem="x0u-bC-fKn" secondAttribute="leading" constant="10" id="YlG-4V-txw"/>
+                            <constraint firstItem="7rd-Dx-fqs" firstAttribute="top" secondItem="2Hz-xK-ySY" secondAttribute="bottom" constant="24" id="qBq-TE-4WL"/>
+                            <constraint firstItem="WYq-co-VIV" firstAttribute="leading" secondItem="x0u-bC-fKn" secondAttribute="leading" constant="10" id="qDV-WV-d49"/>
+                            <constraint firstItem="xbM-QS-Cmj" firstAttribute="top" secondItem="4Qt-8v-Yyg" secondAttribute="bottom" id="rOw-Rj-rXb"/>
+                            <constraint firstItem="x0u-bC-fKn" firstAttribute="trailing" secondItem="J2m-mq-iso" secondAttribute="trailing" constant="72" id="wmt-8j-b5w"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="x0u-bC-fKn"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0kF-zQ-Ge2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1678" y="-368"/>
+            <point key="canvasLocation" x="1677.5999999999999" y="-368.36581709145429"/>
         </scene>
         <!--Chat View Controller-->
         <scene sceneID="n6U-33-Wu4">
@@ -63,7 +115,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DIk-Lc-Gad">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DIk-Lc-Gad" customClass="GradientView" customModule="Smack" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v2f-3O-tzi">
@@ -109,6 +161,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="smackBurger" width="40" height="40"/>
     </resources>
 </document>
